--- a/slides.bib
+++ b/slides.bib
@@ -81,7 +81,7 @@
 }
 
 @article {langford93,
-  author={Joe Langford \& Pauline Clance},
+  author={Joe Langford and Pauline Clance},
   title={The impostor phenomenon: Recent research findings regarding dynamics, personality, and family patterns and their implication for treatment},
   journal={Psychotherapy: Theory, Research, Practice, Training},
   year=1993,
