--- a/slides.tex
+++ b/slides.tex
@@ -7,7 +7,7 @@
 
 \title{Imposter Syndrome}
 \author{Bianca Gibson}
-\institute{Pycon AU 2016}
+\institute{Compcon 2016}
 \date{}
 
 \begin{document}
@@ -67,6 +67,7 @@
 \begin{frame}
   \begin{center}
     \Huge  I can give the impression that I’m more competent than I really am
+    % Other people's praise can seem over the top, to me I'm normal. Once I know something it seems obvious and easy
   \end{center}
 \end{frame}
 
@@ -85,6 +86,7 @@
 \begin{frame}
   \begin{center}
     \Huge  I sometimes think I obtained my present position or gained my present success because I happened to be in the right place at the right time or knew the right people
+    % Got job at REA after making a good impression with the CIO
   \end{center}
 \end{frame}
 
@@ -97,6 +99,7 @@
 \begin{frame}
   \begin{center}
     \Huge I tend to remember the incidents in which I have not done my best more than those times I have done my best
+    % Remembering when I cause production incidents
   \end{center}
 \end{frame}
 
@@ -115,18 +118,21 @@
 \begin{frame}
   \begin{center}
     \Huge    It’s  hard  for  me  to  accept  compliments  or  praise  about  my  intelligence  or  accomplishments
+    % mind goes back to when I've internalised compliments and been rejected for those displays of confidence
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge At times, I feel my success has been due to some kind of luck
+    % Different from just being aware of your priveleges and that they help, attributing it too much to luck
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge   I’m  disappointed  at  times  in  my  present  accomplishments  and  think  I should have accomplished much more
+    % Pick outliers that have excellent accomplishments that are older than me to compare myself to
   \end{center}
 \end{frame}
 
@@ -140,6 +146,7 @@
   \begin{center}
     \Huge     I’m  often  afraid  that  I  may  fail  at  a  new  assignment  or  undertaking  even  though  I  generally  do  well  at  what  I
     attempt
+    % Public speaking! Nervous about speaking even though I've done both of these talks before.
   \end{center}
 \end{frame}
 
@@ -153,12 +160,14 @@
   \begin{center}
     \Huge     If  I  receive  a  great  deal  of  praise  and  recognition  for  something  I’ve  accomplished,  I  tend  to  discount  the  importance
     of  what  I’ve  done
+    % Once I understand something it seems obvious and easy
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge     I often compare my ability to those around me and think they may be more intelligent than I am
+    % again, picking the bad points of comparison
   \end{center}
 \end{frame}
 
@@ -206,7 +215,7 @@
   \begin{center}
     \Huge New endeavour
     \\ \small \cite{apa13}
-    neighbourhood organiser and suggesting I be a council candidate
+%    neighbourhood organiser and suggesting I be a council candidate
   \end{center}
 \end{frame}
 
@@ -269,6 +278,12 @@
 
 \begin{frame}
   \begin{center}
+    \Huge ``The reason we struggle with insecurity is because we compare our behind-the-scenes with everyone else’s highlight reel.'' Steve Furtick
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge Fear and guilt about success
     \\ \small \cite{sakulku11}
   \end{center}
@@ -276,9 +291,8 @@
 
 \begin{frame}
   \begin{center}
-    \Huge Defendence
+    \Huge Mistrusting others
     \\ \small \cite{langford93}
-     % mistrusting others
   \end{center}
 \end{frame}
 
@@ -287,7 +301,6 @@
     \Huge Low affiliation \\
     \includegraphics[scale=.025]{./assets/women.png}
     \\ \small \cite{langford93}
-    % this citation looks funny
      % in women. enjoyable involvement with other people
   \end{center}
 \end{frame}
@@ -370,7 +383,6 @@
     \Huge Personality traits
     \small
      % "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
-     % inverse with conscientiousness
     \\ \small \cite{hh15}
     \\ \small \cite{sakulku11}
   \end{center}
@@ -386,7 +398,8 @@
      % not studied in tech, but higher in systems librarians than other librarians \\
      % high tech knowledge requirements, constant technical change, feel out of date \\
      % translate to devs - expectation to keep up with emerging tech \\
-     % tendency to focus on what colleagues know that we don't \\
+     % tendency to focus on what peers know that we don't \\
+     % going back to the talk about picking what to learn - we can't learn everything! \\
      % how many new js frameworks should we learn per week? \\
     \\ \small \cite{hh15}
     \\ \small \cite{clark14}
@@ -432,7 +445,7 @@
      % chose not to reveal ideas or opinions\\
      % tell people what they want to hear\\
      % intellectual flattery - writing according to their teachers' biases\\
-     % or for a developer - implementing it how the more senior developers or tech lead would want, not what you think is best\\
+     % or for a developer - implementing it how colleagues would want, not what you think is best\\
      % remaining silent in face of opposing view points\\
      % prevents them from finding out what people would think of their authentic views\\
      % maintains imposter syndrome\\
@@ -472,6 +485,7 @@
   \begin{center}
     \Huge Poor mental health
     \\ \small \cite{sakulku11}
+    % For more about this, watch ducky's talk from Saturday
   \end{center}
 \end{frame}
 
@@ -612,7 +626,6 @@
 \begin{frame}
   \begin{center}
     \Huge What to do?
-    \small
   \end{center}
 \end{frame}
 
@@ -620,7 +633,7 @@
   \begin{center}
     \Huge Talk about it
     \small
-     % discuss it in your workplace, like the group therapy sessions
+     % discuss it with your peers, like the group therapy sessions
   \end{center}
 \end{frame}
 
@@ -647,6 +660,14 @@
      % don't charm them
   \end{center}
 \end{frame}
+
+\begin{frame}
+  \begin{center}
+    \includegraphics[scale=.3]{./assets/headpat.jpg}
+    % Pat on the ear for paying attention at the end of the conference, and remember you're all pawesome!
+  \end{center}
+\end{frame}
+
 
 \begin{frame}
   \begin{center}
