women specific version

--- a/slides.tex
+++ b/slides.tex
@@ -7,7 +7,7 @@
 
 \title{Imposter Syndrome}
 \author{Bianca Gibson}
-\institute{Compcon 2016}
+\institute{WOOTconf 2017}
 \date{}
 
 \begin{document}
@@ -86,7 +86,6 @@
 \begin{frame}
   \begin{center}
     \Huge  I sometimes think I obtained my present position or gained my present success because I happened to be in the right place at the right time or knew the right people
-    % Got job at REA after making a good impression with the CIO
   \end{center}
 \end{frame}
 
@@ -99,7 +98,6 @@
 \begin{frame}
   \begin{center}
     \Huge I tend to remember the incidents in which I have not done my best more than those times I have done my best
-    % Remembering when I cause production incidents
   \end{center}
 \end{frame}
 
@@ -118,21 +116,18 @@
 \begin{frame}
   \begin{center}
     \Huge    It’s  hard  for  me  to  accept  compliments  or  praise  about  my  intelligence  or  accomplishments
-    % mind goes back to when I've internalised compliments and been rejected for those displays of confidence
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge At times, I feel my success has been due to some kind of luck
-    % Different from just being aware of your priveleges and that they help, attributing it too much to luck
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge   I’m  disappointed  at  times  in  my  present  accomplishments  and  think  I should have accomplished much more
-    % Pick outliers that have excellent accomplishments that are older than me to compare myself to
   \end{center}
 \end{frame}
 
@@ -146,7 +141,6 @@
   \begin{center}
     \Huge     I’m  often  afraid  that  I  may  fail  at  a  new  assignment  or  undertaking  even  though  I  generally  do  well  at  what  I
     attempt
-    % Public speaking! Nervous about speaking even though I've done both of these talks before.
   \end{center}
 \end{frame}
 
@@ -160,14 +154,12 @@
   \begin{center}
     \Huge     If  I  receive  a  great  deal  of  praise  and  recognition  for  something  I’ve  accomplished,  I  tend  to  discount  the  importance
     of  what  I’ve  done
-    % Once I understand something it seems obvious and easy
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge     I often compare my ability to those around me and think they may be more intelligent than I am
-    % again, picking the bad points of comparison
   \end{center}
 \end{frame}
 
@@ -324,37 +316,10 @@
 
 \begin{frame}
   \begin{center}
-    \Huge High Impulsivity \\
-    \includegraphics[scale=.025]{./assets/men.png} \\
-    \small \cite{langford93}
-     % low in women, high in men
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
     \Huge Low need for change \\
     \includegraphics[scale=.025]{./assets/women.png} \\
     \small \cite{langford93}
      % low in women, high in men
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge High need for change \\
-    \includegraphics[scale=.025]{./assets/men.png} \\
-    \small \cite{langford93}
-     % low in women, high in men
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge Low need for order \\
-    \includegraphics[scale=.025]{./assets/men.png} \\
-    \small \cite{langford93}
-     % in men
   \end{center}
 \end{frame}
 
@@ -430,6 +395,18 @@
      % correlated with other favourale impression management strategies\\
      % makes *lots* of sense for women in tech, since being seen as competetent makes you less likeable\\
   \end{center}
+\end{frame}
+
+\begin{frame}
+\begin{center}
+    \includegraphics[scale=.2]{./assets/tightrope.jpg} \\
+% Competetence makes us be perceived as more masculine -> pushy, bitch, sharp elbows, bossy etc
+% think of all the crap women that are leaders take
+% confidence also perceived as masculine - exacerbates those problems
+% lack of confidence perceived as feminine - push us back in other direction
+% less interpersonal consequences for our competetence
+% cite what works for women at work
+\end{center}
 \end{frame}
 
 \begin{frame}
@@ -565,7 +542,11 @@
 \begin{frame}
   \begin{center}
     \includegraphics[scale=.07]{./assets/IMG_20160809_162050.jpg}
-    % covering different contributions from organising to office quiz contributions
+    % Notes written at debriefs thanking eachother and giving nice feedback
+	%lots of people saying similar stuff helped me internalise it
+	%has to be true, or people learn to discount it. I've learned
+	%to ignore positive feedback at work because it's generally been
+	%dishonest
   \end{center}
 \end{frame}
 
@@ -660,14 +641,6 @@
      % don't charm them
   \end{center}
 \end{frame}
-
-\begin{frame}
-  \begin{center}
-    \includegraphics[scale=.3]{./assets/headpat.jpg}
-    % Pat on the ear for paying attention at the end of the conference, and remember you're all pawesome!
-  \end{center}
-\end{frame}
-
 
 \begin{frame}
   \begin{center}
