--- a/slides.tex
+++ b/slides.tex
@@ -207,7 +207,7 @@
   \begin{center}
     \Huge New endeavour
     \\ \small \cite{apa13}
-%    neighbourhood organiser and suggesting I be a council candidate
+    % organising, new job...
   \end{center}
 \end{frame}
 
@@ -314,6 +314,16 @@
   \end{center}
 \end{frame}
 
+ \begin{frame}
+	 \begin{center}
+	     \Huge High Impulsivity \\
+		\includegraphics[scale=.025]{./assets/men.png} \\
+		\small \cite{langford93}
+		% low in women, high in men
+	 \end{center}
+ \end{frame}
+ 
+
 \begin{frame}
   \begin{center}
     \Huge Low need for change \\
@@ -322,6 +332,26 @@
      % low in women, high in men
   \end{center}
 \end{frame}
+
+\begin{frame}
+	   \begin{center}
+		       \Huge High need for change \\
+		       \includegraphics[scale=.025]{./assets/men.png} \\
+		       \small \cite{langford93}
+		        % low in women, high in men
+	     \end{center}
+\end{frame}
+
+\begin{frame}
+	  \begin{center}
+		    \Huge Low need for order \\
+		    \includegraphics[scale=.025]{./assets/men.png} \\
+		    \small \cite{langford93}
+		     % in men
+	  \end{center}
+\end{frame}
+
+
 
 \begin{frame}
   \begin{center}
@@ -390,7 +420,7 @@
     \\ \small \cite{sakulku11}
      % Do not want to appear imperfect, but actually openly disclose their imperfection.\\
      % Is it an interpersonal strategy rather than self evalution?\\
-     % could be to avoid negative interpersonal implications of future failures\\
+     % could be to avoid negative interpersonal implications of future failures and being seen as too confident\\
      % only express lower performance expectations when they know others see it\\
      % correlated with other favourale impression management strategies\\
      % makes *lots* of sense for women in tech, since being seen as competetent makes you less likeable\\
@@ -601,6 +631,19 @@
     \\ \small \cite{langford93}
      % on external validation for self esteem
      % internalise self worth
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Meditation
+    % start with compassion - rock the baby then self
+    % appreciation - someone you admire, then admirable stuff in yourself
+    % easiest where you share some traits - colleagues from volunteering
+    % Then ask yourself: Is it completely true that I'm incompetent? That I don't do enough? That I don't try enough?
+    % Is there any chance at all that isn't 100% true?
+    % Positive statement: I am competent.
+    % Is there any chance at all that is true?
   \end{center}
 \end{frame}
 
